# pulverization-moisture-soil

./: .gitignore  Dockerfile  build.gradle.kts  docker-compose.yml  renovate.json
esp32/: boot.py  moisture.py
esp32-moisture-app/: Cargo.toml
esp32-moisture-app/moisture-sensor/: Cargo.toml
esp32-moisture-app/moisture-sensor/src/: main.rs
esp32-moisture-app/src/: main.rs
esp32-moisture-app/valve-actuator/: Cargo.toml  build.rs  sdkconfig.defaults
esp32-moisture-app/valve-actuator/src/: main.rs
gradle/: libs.versions.toml
src/commonMain/kotlin/it/nicolasfarabegoli/moisture/: Configuration.kt  MoistureSensor.kt  MoistureState.kt  SoilMoistureBehaviour.kt  ValveActuator.kt
src/jvmMain/kotlin/it/nicolasfarabegoli/moisture/: MoistureSensor.kt  ValveActuator.kt
src/jvmMain/kotlin/it/nicolasfarabegoli/moisture/units/: ActuatorsUnit.kt  BehaviourUnit.kt  SensorsUnit.kt
src/nativeMain/kotlin/it/nicolasfarabegoli/moisture/: MoistureSensor.kt  ValveActuator.kt
