[package]
name = "moisture-sensor"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]
pio = ["esp-idf-sys/pio"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.34", features = ["binstart"] }
esp-idf-svc = "0.48"
esp-idf-hal = "0.42"
embedded-svc = "0.27"
embedded-hal = "1.0"
json = "0.12.4"
spmc = "0.3.0"

[build-dependencies]
embuild = { version = "0.31", features = ["elf"] }
anyhow = "1"
