[package]
name = "valve-actuator"
version = "0.1.0"
edition = "2021"

[features]
default = ["experimental"]
pio = ["esp-idf-sys/pio"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1.0.82", features = ["backtrace"]}
log = "0.4.21"
url = "2.5.0"
esp-idf-sys = { version = "0.36.0", features = ["binstart"] }
esp-idf-svc = "0.49.0"
esp-idf-hal = "0.44.0"
embedded-svc = "0.28.0"
embedded-hal = "1.0"
json = "0.12.4"
spmc = "0.3.0"

[build-dependencies]
embuild = { version = "0.32.0", features = ["elf"] }
anyhow = "1.0.82"